--- a/templates/prescreener.html
+++ b/templates/prescreener.html
@@ -235,6 +235,11 @@
         </div>
       </div>
     </div>
+    <footer>
+      This prescreener uses the SNAP eligibility API, created by 18F's Eligibility APIs Initiative.
+      <br/><br/>
+      See the code for the SNAP API or reach out to the team with questions or feedback.
+    </footer>
   </body>
   <script type="text/javascript">
       function toggleReasons () {
