Add in two links

--- a/templates/prescreener.html
+++ b/templates/prescreener.html
@@ -236,9 +236,9 @@
       </div>
     </div>
     <footer>
-      This prescreener uses the SNAP eligibility API, created by 18F's Eligibility APIs Initiative.
+      This prescreener uses a SNAP Eligibility API created by <a href="https://github.com/18F/eligibility-rules-service/blob/master/README.md">18F's Eligibility APIs Initiative</a>.
       <br/><br/>
-      See the code for the SNAP API or reach out to the team with questions or feedback.
+      <a href="https://github.com/18F/snap-api-prototype/">See the code for the SNAP API</a>, or reach out to the team with questions or feedback.
     </footer>
   </body>
   <script type="text/javascript">
