--- a/templates/prescreener.html
+++ b/templates/prescreener.html
@@ -238,7 +238,7 @@
     <footer>
       This prescreener uses a SNAP Eligibility API created by <a href="https://github.com/18F/eligibility-rules-service/blob/master/README.md">18F's Eligibility APIs Initiative</a>.
       <br/><br/>
-      <a href="https://github.com/18F/snap-api-prototype/">See the code for the SNAP API</a>, or reach out to the team with questions or feedback.
+      <a href="https://github.com/18F/snap-api-prototype/">See the code for the SNAP API</a>, or <a href="mailto:eligibility-apis-initiative@gsa.gov">reach out to the team</a> with questions or feedback.
     </footer>
   </body>
   <script type="text/javascript">
