--- a/templates/prescreener.html
+++ b/templates/prescreener.html
@@ -236,9 +236,12 @@
       </div>
     </div>
     <footer>
-      This prescreener uses a SNAP Eligibility API created by <a href="https://github.com/18F/eligibility-rules-service/blob/master/README.md">18F's Eligibility APIs Initiative</a>.
-      <br/><br/>
-      <a href="https://github.com/18F/snap-api-prototype/">See the code for the SNAP API</a>, or <a href="mailto:eligibility-apis-initiative@gsa.gov">reach out to the team</a> with questions or feedback.
+      <div>
+        This prescreener uses a SNAP API created by the <a href="https://github.com/18F/eligibility-rules-service/blob/master/README.md">Eligibility APIs Initiative</a> from <a href="https://10x.gsa.gov/">10x</a> and <a href="">18F</a>.
+      </div>
+      <div>
+        <a href="https://github.com/18F/snap-api-prototype/">See the code for the SNAP API</a>, or <a href="mailto:eligibility-apis-initiative@gsa.gov">reach out to the team</a> with questions or feedback.
+      </div>
     </footer>
   </body>
   <script type="text/javascript">
