--- a/templates/prescreener.html
+++ b/templates/prescreener.html
@@ -12,8 +12,8 @@
   </style>
   <body>
     <div class="alert">
-      This is a demonstration website only.
-      Do not enter any private or personal data.
+      <div>This is a demonstration website only.</div>
+      <div>Do not enter any private or personal data.</div>
     </div>
     <div class="grid-container margin-y-5">
       <div class="grid-row grid-gap-lg">
