Add padding to page body to stop footer from cutting off submit button

--- a/templates/prescreener.html
+++ b/templates/prescreener.html
@@ -15,7 +15,7 @@
       <div>This is a demonstration website only.</div>
       <div>Do not enter any private or personal data.</div>
     </div>
-    <div class="grid-container margin-y-5">
+    <div id="main" class="grid-container margin-y-5">
       <div class="grid-row grid-gap-lg">
         <div class="tablet:grid-col-6">
           <h1>Could you be eligible for help with your food budget?</h1>
