--- a/static/custom-styles.css
+++ b/static/custom-styles.css
@@ -49,6 +49,10 @@ fieldset legend {
   font-size: 14px;
 }
 
+#main {
+  padding-bottom: 80px;
+}
+
 footer {
   color: white;
   background-color: #1B1349;
