Make radio buttons for elderly or disabled household member required

--- a/templates/prescreener.html
+++ b/templates/prescreener.html
@@ -137,7 +137,8 @@
                          id="input__household_includes_elderly_or_disabled_true"
                          type="radio"
                          name="household_includes_elderly_or_disabled"
-                         value="true">
+                         value="true"
+                         required>
                   <label id="label__household_includes_elderly_or_disabled_true"
                          class="usa-radio__label"
                          for="input__household_includes_elderly_or_disabled_true">
@@ -149,7 +150,8 @@
                          id="input__household_includes_elderly_or_disabled_false"
                          type="radio"
                          name="household_includes_elderly_or_disabled"
-                         value="false">
+                         value="false"
+                         required>
                   <label id="label__household_includes_elderly_or_disabled_false"
                          class="usa-radio__label"
                          for="input__household_includes_elderly_or_disabled_false">
