--- a/templates/prescreener.html
+++ b/templates/prescreener.html
@@ -71,7 +71,7 @@
                 <option value="TX">Texas</option>
               -->
                 <option value="UT">Utah</option>
-                <option value="VT">Vermont</option>
+                <!-- <option value="VT">Vermont</option> -->
                 <option value="VA">Virginia</option>
                 <!--
                 <option value="WA">Washington</option>
