--- a/templates/prescreener.html
+++ b/templates/prescreener.html
@@ -70,7 +70,7 @@
                 <option value="TN">Tennessee</option>
                 <option value="TX">Texas</option>
               -->
-                <option value="UT">Utah</option>
+                <!-- <option value="UT">Utah</option> -->
                 <!-- <option value="VT">Vermont</option> -->
                 <option value="VA">Virginia</option>
                 <!--
